backend/youtube-comment-analysis/src/main/java/com/example/youtube_comment_analysis/error/PlaylistEmptyException.java
package com.example.youtube_comment_analysis.error;

public class PlaylistEmptyException extends RuntimeException {
    public PlaylistEmptyException(String msg) { super(msg); }
}
